摘抄了官方笔记